2004-12-05 Vangelis Rokas <vrokas AT otenet.gr>

	* applied patch from bug-report #1076292,
	* applied patches for genAnd and Goto-optimizations for Raphael
	Neider,
	* src/SDCCicode.c (printOperand): fixed !REGA source to compile and
	dump a less iCode information,
	* src/pic16/device.h (pic16_options_t): added field debgen,
	* src/pic16/gen.h: added macros DUMP_FUNCTION_ENTRY,
	DUMP_FUNCTION_EXIT, FENTRY, FENTRY2,
	* src/pic16/gen.c (my_powof2): renamed to pic16_my_powof2 and made
	puclic,
	* (various functions): added macros FENTRY and FENTRY2 to functions,
	to emit function prologue,
	* (various functions): fixed indentation,
	* (genNearPointerGet): fixed loading of FSR0,
	* (genPackBits): applied patch from Raphael Neider to fix updating
	of FSR0 and touching only the modified bits,
	* src/pic16/genarith.c (various functions): added macros FENTRY to
	emit function prologue in comments,
	* src/pic16/pcode.h: added functions debugf2, debugf3,
	* src/pic16/ralloc.c: partial fix for packForPush caused
	segmentation fault,

2004-12-04 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added 261.a,b (16 bit rotate) by Stas Sergeev
	  <stsp AT users.sourceforge.net> with reversed byte order
	* support/regression/tests/rotate.c: added (ds390 skips some tests)

2004-12-03 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/gen.c (genLeftShift, genRightShift): fixed second part of
	  bug #1074377
	* src/hc08/gen.c (genrshFour, shiftRLong, shiftLLong),
	* src/mcs51/gen.c (shiftLLong): Fixed some shifting bugs Frieder found

2004-12-02 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/pcode.c : fixed a problem where banksel was not being inserted.

2004-12-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCpeeph.c (callFuncByName): support combined peephole rule
	  conditions,
	  (setFromConditionArgs): friendly operand parser for peephole rules,
	  (operandBaseName, operandsNotRelated): new peephole condition